--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,14 @@
             <scope>runtime</scope>
         </dependency>
 
-    </dependencies>
+    
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.25</version>
+</dependency>
+
+</dependencies>
 
     <properties>
         <java.version>11</java.version>
